fixed cityscape overflow

--- a/adventure/templates/style.css
+++ b/adventure/templates/style.css
@@ -190,3 +190,7 @@ p {
 #links > * {
     margin: 5px;
 }
+
+.cityscape {
+    width: 100%;
+}
